# Calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  Calculator.cpp  Calculator.h  main.cpp
test/: CMakeLists.txt  calculator_unittest.cpp
